--- a/style.css
+++ b/style.css
@@ -33,11 +33,11 @@ nav {
 }
 
 .container {
-  width: 60vw;
+  width: 70vw;
   margin: auto;
   padding: 10px 0;
   font-family: "Roboto", sans-serif;
-  line-height: 35px;
+  /* line-height: 35px; */
 }
 
 .toolbar-item button {
@@ -47,15 +47,39 @@ nav {
 }
 
 .section {
-  margin: 30px 0;
+  margin: 40px 0;
+  background-color: rgb(31 41 55);
+  padding: 25px;
+  border-radius: 10px;
+  box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px,
+    rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px,
+    rgba(240, 46, 170, 0.05) 25px 25px;
 }
 
 .section h1 {
   font-weight: bolder;
   font-size: 2rem;
+  text-align: center;
+  margin: 15px 0;
 }
 
 .section h3 {
   font-weight: 500;
   font-size: 1.5rem;
+  margin: 15px 0;
+  text-align: center;
+}
+
+.desc {
+  margin: 10px 0;
+  text-align: center;
+}
+
+.code-block {
+  padding: 10px;
+  border-radius: 20px;
+  margin: 10px;
+  background-color: rgb(17 24 39);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
