--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav {
 }
 
 .container {
-  width: 70vw;
+  width: 80vw;
   margin: auto;
   padding: 10px 0;
   font-family: "Roboto", sans-serif;
@@ -46,6 +46,9 @@ nav {
   padding: 0 10px !important;
 }
 
+#structure {
+  margin-top: 10px;
+}
 .section {
   margin: 40px 0;
   background-color: rgb(31 41 55);
@@ -82,4 +85,16 @@ nav {
   background-color: rgb(17 24 39);
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+}
+
+footer {
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(31 41 55);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  font-family: "Chivo Mono", monospace;
 }
